[package]
name = "continue"
version = "0.1.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]

edition = "2024"
description = "Swift-style continuation API"
homepage = "https://sealedabstract.com/code/continue"
repository = "https://github.com/drewcrawford/continue"
license = "MIT OR Apache-2.0"
keywords = ["continuation", "async", "await", "futures", "task"]
categories = ["asynchronous", "concurrency", "rust-patterns" ]
exclude = [".*"]

[dependencies]
atomic-waker = "~1"
thiserror = "~2"

# really for instrumentation in wasm contexts
logwise = "0.2"

[dev-dependencies]
test_executors = "0.3"


[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"
wasm_thread = "0.3.3"

[patch.crates-io]
test_executors = {path = "../test_executors"}